# tensora

./: CMakeLists.txt  README.md  build.sh
contrib/: .gitignore  CMakeLists.txt
example/: CMakeLists.txt
example/demo/: CMakeLists.txt  main.cpp
include/tensora/: array.hpp  forward.hpp  index.hpp  slice.hpp  strides.hpp  tensor.hpp  type.hpp  utils.hpp
test/: CMakeLists.txt  DimVectorTest.h  TensorStorageTest.h  Test.cpp
