cmake_minimum_required(VERSION 3.0)

#if(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
#  	set(CMAKE_TOOLCHAIN_FILE "$ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake"
#	  CACHE STRING "")
#	MESSAGE(STATUS "Using vcpkg")
#endif()

project(tensora)

SET(TENSORA_PATH ${PROJECT_SOURCE_DIR} CACHE STRING "Adds a path to TENSORA" FORCE)
SET(TENSORA_PATH_INCLUDE ${TENSORA_PATH}/include CACHE STRING "Adds a path to TENSORA header" FORCE)
SET(TENSORA_PATH_HEADER ${TENSORA_PATH_INCLUDE}/traph CACHE STRING "Adds a path to TENSORA header" FORCE)
SET(TENSORA_PATH_SOURCE ${TENSORA_PATH}/source CACHE STRING "Adds a path to TENSORA source" FORCE)
SET(TENSORA_PATH_DEPENDENCIES ${TENSORA_PATH}/contrib CACHE STRING "Adds a path to TENSORA dependencies" FORCE)
SET(TENSORA_PATH_INSTALL ${TENSORA_PATH}/install CACHE STRING "Adds a path for TENSORA dependencies intalled" FORCE)
SET(TENSORA_PATH_TEST ${TENSORA_PATH}/test CACHE STRING "Adds a path for TENSORA tests" FORCE)

ADD_SUBDIRECTORY(source)
ADD_SUBDIRECTORY(contrib)
ADD_SUBDIRECTORY(example)
ADD_SUBDIRECTORY(test)